--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
+numpy>=1.11.0
+pandas>=0.17.1,<=0.19.2
+pandas_datareader==0.5.0
 requests
-https://github.com/quantopian/empyrical
+seaborn
+matplotlib
+flask
+git+https://github.com/quantopian/empyrical
+git+https://github.com/czielinski/portfolioopt
