--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ numpy>=1.11.0
 pandas==0.20.3
 numexpr>=2.4.6
 pandas_datareader==0.5.0
+tables
 requests
 seaborn
 matplotlib
 flask
 git+https://github.com/quantopian/empyrical
+git+https://github.com/czielinski/portfolioopt
