removing tables dependency and upgrading pandas

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-numpy==1.11.0
-pandas==0.20.3
-numexpr==2.4.6
-pandas_datareader==0.6.0
-tables
+numpy>=1.18.3
+pandas>=1.0.3
+numexpr>=2.6.2
+pandas_datareader>=0.8.0
 requests
-seaborn
+seaborn>=0.9.0
 matplotlib
 flask
-pyfolio==0.8.0
+pytz<2020.0,>=2019.3
+git+https://github.com/robinhood-unofficial/pyrh.git#egg=pyrh
 git+https://github.com/quantopian/empyrical
 git+https://github.com/czielinski/portfolioopt
